fixed navigation bar on small screen

--- a/src/output.css
+++ b/src/output.css
@@ -600,10 +600,6 @@ video {
   border-width: 0;
 }
 
-.fixed {
-  position: fixed;
-}
-
 .absolute {
   position: absolute;
 }
@@ -815,6 +811,11 @@ video {
 .bg-dark {
   --tw-bg-opacity: 1;
   background-color: rgb(74 78 105 / var(--tw-bg-opacity));
+}
+
+.bg-darkest {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 34 59 / var(--tw-bg-opacity));
 }
 
 .bg-center {
@@ -1109,6 +1110,11 @@ button:focus-visible {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:bg-dark:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(74 78 105 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-darkest:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(34 34 59 / var(--tw-bg-opacity));
@@ -1287,6 +1293,10 @@ button:focus-visible {
 
   .md\:border-0 {
     border-width: 0px;
+  }
+
+  .md\:bg-transparent {
+    background-color: transparent;
   }
 
   .md\:p-0 {
